# WTH-CLI

./: .env.example  Cargo.toml  LICENSE  README.md
src/: main.rs
