[package]
name = "wth-cli"
version = "1.0.0"
edition = "2021"
description = "Run any command. If it fails, AI tells you why and how to fix it."
license = "MIT"
keywords = ["cli", "terminal", "error", "ai", "fix", "debug", "ollama", "developer-tools"]

[[bin]]
name = "wth"
path = "src/main.rs"

[dependencies]
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
indicatif = "0.17"
dotenvy = "0.15"
termimad = "0.34.1"
dialoguer = "0.10"
tempfile = "=3.15.0"
