[package]
name = "wtf-cli"
version = "1.0.0"
edition = "2021"
authors = ["Jitse Lambrichts <jitse.lambrichts@gmail.com>"]
description = "AI-powered terminal error interpreter. Prepend wtf to any command to get instant diagnoses and fixes."
license = "MIT"
readme = "README.md"
keywords = ["cli", "terminal", "error", "ai", "fix", "debug", "ollama", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "wtf"
path = "src/main.rs"

[dependencies]
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
indicatif = "0.17"
dotenvy = "0.15"
termimad = "0.34.1"
dialoguer = "0.10"
tempfile = "=3.15.0"
